# forecastos

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
forecastos/: __init__.py  chart.py  custom_trend.py  dataset.py  exposure.py  feature.py  forecast.py  global_utils.py  persistent_trend.py  pipeline.py  read.py  saveable.py  trend.py  util.py
forecastos/feature_hub/: __init__.py  feature.py  provider.py
forecastos/portfolio/: __init__.py  backtest_controller.py
forecastos/portfolio/constraint_model/: __init__.py  base_constraint.py  factor_constraint.py  leverage_constraint.py  long_constraint.py  return_constraint.py  trade_constraint.py  weight_constraint.py
forecastos/portfolio/cost_model/: __init__.py  base_cost.py  short_holding_cost.py  trading_cost.py
forecastos/portfolio/result/: __init__.py  base_result.py  save_result.py  weights_result.py
forecastos/portfolio/risk_model/: __init__.py  (+3 more)
forecastos/utils/: __init__.py  hydrate.py  readable.py
guides/featurehub/: dataset.md  feature.md  why_featurehub.md
guides/hivemind_advanced/: alpha_applications.md  creating_an_overlay.md  risk_applications.md
guides/hivemind_basic/: custom_trend.md  exposure.md  persistent_trend.md  pipeline.md  pit_context.md  trend.md  universe.md  why_hivemind.md
guides/introduction/: getting_started.md
guides/investos/: investos_external_guides.md  why_investos.md
guides/other/: ui_vs_api_vs_os.md
guides/pm_bespoke/: custom_constraint_models.md  custom_cost_models.md  custom_investment_strategies.md  custom_risk_models.md
guides/pm_off_the_shelf/: backtest_controller.md  constraint_models.md  cost_models.md  investment_strategies.md  risk_models.md
guides/pm_reporting/: analyzing_backtest_results.md  external_portfolios.md
guides/pm_simple_examples/: rank_long_short.md  spo.md
guides/portfolio_management_(pm)_introduction/: how_pm_works.md  why_pm.md
tests/: hivemind_api_smoke_test.py
tests/guide_examples/: rank_long_short_test.py  spo_test.py  spo_tranches_distr_test.py  spo_tranches_test.py  spo_weights_test.py
(+6 files in other folders)
