[tool.poetry]
name = "forecastos"
version = "0.3.0"
description = "ForecastOS.com quantitative investing tools"
authors = ["Charlie Reese <charlie.reese@hey.com>", "ForecastOS"]
license = "MIT"
readme = "README.md"
homepage = "https://forecastos.com/"
repository = "https://github.com/forecastos/forecastos"
documentation = "https://forecastos.com/guides/introduction/getting_started"
keywords = ["hivemind", "investing", "alpha", "backtesting", "portfolio", "optimization", "forecastos", "trends", "sentiment", "themes", "exposures"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.9"
cvxpy = "^1.5.4"
requests = "^2.31.0"
boto3 = "^1.34.78"
pandas = "^2.2.2"
numpy = ">=1.24.3"
scikit-learn = "^1.5.1"
fastparquet = "^2024.5.0"
scipy = "^1.13.1"
statsmodels = "^0.14.2"
dask = "^2024.8.0"
dask-cloudprovider = "^2022.10.0"
aiobotocore = "^2.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "<9"
python-dotenv = "^1.2.1"
jupyter = "^1.0.0"
pandas-market-calendars = "^4.1.4"
jupyterlab = "^3"
plotly = "^5.15.0"
pyarrow = ">=17.0.0"
xgboost = "^1.7.6"
scikit-learn = "^1.3.0"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
]
norecursedirs = [
    "__pycache__",
    ".git",
    "docs",
    "examples",
]
